--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,9 @@
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.11.2",
-    "vue-router": "^3.0.3"
+    "vue-js-toggle-button": "^1.3.2",
+    "vue-router": "^3.0.3",
+    "vue-select": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-service": "^3.0.5",
