transifex: add Cockpit labels
[skip ci]

--- a/.tx/config
+++ b/.tx/config
@@ -12,4 +12,8 @@ source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_I
 source_lang = en
 type = PHP_ALT_ARRAY
 
+[nethserver.CockpitSuricata]
+source_file = ui/public/i18n/language.json
+source_lang = en
+type = KEYVALUEJSON
 
